--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -11,3 +11,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.content {
+  flex-basis: 68%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow-y: auto;
+  padding: 3% 2%;
+}
+.hide-x::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-x {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.font-100{
+  font-weight: 100 !important;
+}
+.font-200{
+  font-weight: 200 !important;
+}
+.font-300{
+  font-weight: 300 !important;
+}
+.font-400{
+  font-weight: 400 !important;
+}
+.color-xlight{
+  color:rgb(107, 107, 107) !important;
+}
+.color-xxlight{
+  color:rgb(176 176 176) !important;
+}
